<resources>
    <string name="app_name">DogVIPRefactored</string>
    <string name="facebook_app_id">352220898575747</string>
    <string name="fb_login_protocol_scheme">fb352220898575747</string>
    <string name="account_type">com.dogvip.giannis.dogvipref</string>

    <string name="terms_url">http://dogvip.votingsystem.gr/terms.html</string>

    <string name="app_logo">app_logo</string>
    <string name="image_cont_desc">cont_desc</string>
    <string name="frgmnt_created">frgmnt_created</string>

    <string name="splash_fgmt">splash_fgmt</string>
    <string name="regstr_fgmt">register_fgmt</string>
    <string name="signin_fgmt">signin_fgmt</string>
    <string name="forgotpaswrd_fgmt">forgotpaswrd_fgmt</string>
    <string name="retained_signin_fgmt">retained_signin_fgmt</string>
    <string name="retained_signup_fgmt">retained_signup_fgmt</string>
    <string name="retained_forgotpass_fgmt">retained_forgotpass_fgmt</string>
    <string name="retained_dashboard_act">retained_dashboard_act</string>
    <string name="retained_owner_form_act">retained_owner_form_act</string>
    <string name="retained_owner_profile_act">retained_owner_profile_act</string>
    <string name="retained_image_upload_fgmt">retained_image_upload_fgmt</string>
    <string name="alert_dialog_fgmt">alert_dialog_fgmt</string>
    <string name="date_dialog_fgmt">date_dialog_fgmt</string>

    <string name="facebook_regstr_label">Εγγραφη μεσω facebook</string>
    <string name="google_regstr_label">Εγγραφη μεσω google</string>
    <string name="facebook_singnin_label">Συνδεση μεσω facebook</string>
    <string name="google_signin_label">Συνδεση μεσω google</string>
    <string name="sign_in_label">Είσοδος στη DogVIP</string>
    <string name="sign_up_label">Εγγραφή στη DogVIP</string>
    <string name="forgotpass_label">Ξέχασα τον κωδικό μου</string>
    <string name="logout">Αποσύνδεση</string>
    <string name="logout_dialog_title">Αποσύνδεση χρήστη. Είσαι σίγουρος?</string>
    <string name="delete_owner_dialog_title">Διαγραφή Ιδιοκτήτη</string>
    <string name="delete_owner_dialog_msg">Ο ιδιοκτήτης και όλα τα κατοικίδια του θα διαγραφούν οριστικά.</string>
    <string name="yes">ΝΑΙ</string>
    <string name="no">ΟΧΙ</string>
    <string name="upload_image_dialog_title">Νέα Φωτογραφία</string>
    <string name="upload_image_dialog_msg">Βγάλε νέα φωτογραφία ή επίλεξε μία υπάρχουσα από τη βιβλιοθήκη.</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">ΚΑΜΕΡΑ</string>
    <string name="image_choose_label">Επιλογή φωτογραφίας</string>

    <string name="email_plhldr"><u>Email</u></string>
    <string name="password_plhldr"><u>Κωδικός</u></string>
    <string name="confrmpassword_plhldr"><u>Επιβεβαίωση κωδικού</u></string>
    <string name="new_password_plhldr"><u>Νέος κωδικός</u></string>
    <!--REQUEST ACTIONS-->
    <string name="register_user">register_user</string>
    <string name="signin_user">signin_user</string>
    <string name="forgot_paswrd">forgot_password</string>
    <string name="save_registration_token">save_registration_token</string>
    <string name="get_my_owner_details">get_my_owner_details</string>
    <string name="get_owner_form_details">get_owner_form_details</string>
    <string name="delete_owner">delete_owner</string>

    <string name="signin_btn_label">Εισοδος</string>
    <string name="register_btn_label">Εγγραφη</string>
    <string name="signin">Συνδεση</string>
    <string name="submit_btn_label">Υποβολη</string>
    <string name="register_label">Δημιουργία λογαριασμού.</string>
    <string name="signin_label">Για ήδη εγγεγραμένους χρήστες.</string>
    <string name="forgot_password_label">Ξέχασα τον κωδικό μου!</string>
    <string name="not_member_label">Δεν είστε μέλος; Εγγραφή.</string>
    <string name="member_label">Είστε μέλος; Είσοδος εδώ.</string>
    <string name="confirm_account">Επιβεβαίωσε την εγγραφή σου μέσω email.</string>
    <string name="sign_up_cancel">Η εγγραφή ακυρώθηκε.</string>
    <string name="signin_cancel">Η είσοδος ακυρώθηκε.</string>
    <string name="close">Κλεισιμο</string>
    <string name="retry">Ξαναπροσπαθησε</string>
    <string name="add_owner">Δημιουργία νέου</string>
    <string name="edit_owner">Επεξεργασία προφίλ</string>
    <string name="required_field">Υποχρεωτικό πεδίο</string>
    <string name="not_valid_email">Μη έγκυρο email</string>
    <string name="not_valid_pass">Απαιτείται κωδικός 8 λατινικών χαρακτήρων</string>
    <string name="passwrds_not_match">Ασυμφωνία κωδικών</string>
    <string name="not_valid_name_fld">Απαιτούνται μόνο χαρακτήρες</string>
    <string name="welcome">Καλωσήρθατε στη DogVIP.</string>
    <string name="reset_passwrd_notfctn_title">Αλλαγή κωδικού στη DogVIP.</string>
    <string name="invalid_date">Μη έγκυρη ημερομηνία.</string>
    <string name="invalid_email">Μη έγκυρο email.</string>
    <string name="email_not_available">Το συγκεκριμένο email υπάρχει.</string>
    <string name="city_no_match">Η συγκεκριμένη πόλη δεν είναι διαθέσιμη.</string>
    <string name="invalid_password">Μη έγκυρος κωδικός.</string>
    <string name="pass_mismatch">Ασυμφωνία κωδικών.</string>
    <string name="invalid_email_password">Μη έγκυρο email ή κωδικός πρόσβασης.</string>
    <string name="account_not_verified">Ο λογαριασμός δεν έχει εγκριθεί ακόμα.</string>
    <string name="email_in_use">Το email χρησιμοποιείται από κάποιον αλλο λογαριασμό.</string>
    <string name="email_not_found">Το συγκεκριμένο email δεν βρέθηκε.</string>
    <string name="no_owner_exists">Δεν βρέθηκε ιδιοκτήτης για το λογαριασμό.</string>
    <string name="new_password_is_same">Ο νέος κωδικός δεν μπορεί να είναι ίδιος με τον παλιό.</string>
    <string name="reset_passwrd_success">Η αλλαγή του κωδικού πραγματοποιήθηκε με επιτυχία.</string>
    <string name="required_fields_owner">* Υποχρεωτικά πεδία. \n \n ** Με τα παρακάτω στοιχεία καταχωρείσαι σαν ιδιοκτήτης στην εφαρμογή.</string>
    <string name="owner_added">Ο ιδιοκτήτης προστέθηκε με επιτυχία.</string>
    <string name="swipe_to_edit_delete">Σύρετε αριστερά για επεξεργασία/διαγραφή.</string>
    <string name="no_pets">Δεν υπάρχουν διαθέσιμα κατοικίδια.</string>
    <string name="add_pet_label">Πατήστε το κουμπί προσθήκη για να προσθέσετε τα κατοικίδια σας!</string>
    <string name="profile_photo_gr">ΕΙΚΟΝΑ ΠΡΟΦΙΛ</string>
    <string name="surname_gr">ΕΠΙΘΕΤΟ</string>
    <string name="city_gr">ΠΟΛΗ</string>
    <string name="birthdate_gr">ΗΜ. ΓΕΝΝΗΣΗΣ</string>
    <string name="name_gr">ΟΝΟΜΑ</string>
    <string name="phone_gr">ΤΗΛΕΦΩΝΟ</string>
    <string name="race_gr">ΦΥΛΗ</string>
    <string name="half_blood_gr">ΗΜΙΑΙΜΟ</string>
    <string name="microchip_gr">ΑΡΙΘΜΟΣ MICROCHIP</string>
    <string name="genre_gr">ΦΥΛΛΟ</string>
    <string name="weight_gr">ΒΑΡΟΣ ΣΕ ΚΙΛΑ</string>
    <string name="neutered_gr">ΣΤΕΙΡΩΜΕΝΟ</string>
    <string name="chrctr_gr">ΧΑΡΑΚΤΗΡΑΣ</string>
    <string name="save">ΑΠΟΘΗΚΕΥΣΗ</string>
    <string name="image_size_limit">Όριο εικόνας: 6MB</string>
    <string name="name_plhldr">*<u>Όνομα</u></string>
    <string name="surname_plhldr">*<u>Επίθετο</u></string>
    <string name="birth_date_plhldr">*<u>Ημ. γέννησης</u></string>
    <string name="birth_date_notreq_plhldr">Ημ. γέννησης</string>
    <string name="city_plhldr"><u>Πόλη</u></string>
    <string name="phone_plhldr"><u>Τηλέφωνο</u></string>
    <string name="race_plhldr">*<u>Φυλή</u></string>
    <string name="microchip_plhldr"><u>Αριθμός Microchip</u></string>
    <string name="weight_plhldr"><u>Βάρος</u></string>
    <string name="chrctr_plhldr"><u>Χαρακτήρας</u></string>
    <string name="show_images">φωτογραφιες</string>
    <string name="edit">Επεξεργασία</string>
    <string name="delete">Διαγραφή</string>

    <!--<string name="required_field">Υποχρεωτικό πεδίο</string>-->
    <string name="required_fields">* Υποχρεωτικά πεδία.</string>
    <string name="terms_label">Όροι χρήσης.</string>

    <!-- DASHBOARD ACTIVITY -->
    <string name="my_pets">Τα κατοικίδια μου</string>
    <string name="sitters">Pet Sitters</string>
    <string name="love_match">Love Match</string>
    <string name="profs">Επαγγελματίες</string>
    <string name="sos">Χάθηκα - Βρέθηκα</string>
    <string name="vets">Κτηνίατροι</string>
    <string name="offers">Προσφορές</string>
    <string name="more">Περισσότερα</string>
    <string name="section_not_available_yet">Η συγκεκριμένη ενότητα θα ενεργοποιηθεί σε νέα έκδοση της εφαρμογής.</string>

    <string name="email">email</string>
    <string name="token">token</string>
    <string name="user_id">user_id</string>
    <string name="email_authenticated">email_authenticated</string>
    <string name="is_forgot_pass_email_valid">is_forgot_pass_email_valid</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="owner_exists">owner_exists</string>
    <string name="owner_deleted">owner_deleted</string>

    <string name="no_internet_connection">Σφάλμα. Χωρίς σύνδεση.</string>
    <string name="error">Σφάλμα. Προσπάθησε ξανά.</string>
    <string name="empty_required_fields">Συμπλήρωσε τα υποχρεωτικά πεδία *</string>

</resources>
