<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="processing"
            type="boolean" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:contentDescription="@string/image_cont_desc"
                app:srcCompat="@drawable/logo" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/hiddenFbBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/facebookBtn"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:text="@string/facebook_regstr_label"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/facebook_icon"
                android:drawableStart="@drawable/facebook_icon"
                android:background="@color/facebook_color" />

            <Button
                android:id="@+id/googleBtn"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:text="@string/google_regstr_label"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/google_icon"
                android:drawableStart="@drawable/google_icon"
                android:background="@color/google_color" />

            <ImageView
                android:id="@+id/divider"
                android:layout_width="65dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_cont_desc"
                app:srcCompat="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginTop="11dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:elevation="2dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:contentDescription="@string/image_cont_desc"
                    app:srcCompat="@drawable/email" />

                <EditText
                    android:id="@+id/emailEdt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:textSize="12sp"
                    android:paddingRight="8dp"
                    android:hint="@string/email_plhldr"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:elevation="2dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:contentDescription="@string/image_cont_desc"
                    app:srcCompat="@drawable/lock" />

                <EditText
                    android:id="@+id/passEdt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:textSize="12sp"
                    android:paddingRight="8dp"
                    android:hint="@string/password_plhldr"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:elevation="2dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:contentDescription="@string/image_cont_desc"
                    app:srcCompat="@drawable/lock" />

                <EditText
                    android:id="@+id/confpassEdt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:textSize="12sp"
                    android:paddingRight="8dp"
                    android:hint="@string/confrmpassword_plhldr"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword" />

            </LinearLayout>

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="23dp"
                android:layout_gravity="center_horizontal"
                android:gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/error_color"
                android:text="@string/required_fields" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="222dp"
                    android:layout_height="48dp"
                    android:text="@string/register_btn_label"
                    android:layout_marginBottom="4dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/ripple_drawable"
                    android:visibility="@{processing ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toTopOf="@+id/termsBtn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <LinearLayout
                    android:id="@+id/loadingIndLlt"
                    android:layout_width="222dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/ripple_drawable"
                    android:elevation="2dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="@{!processing ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toTopOf="@+id/termsBtn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/loadingInd"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        style="@style/AVLoadingIndicatorView"
                        app:indicatorName="BallPulseIndicator" />

                </LinearLayout>

                <Button
                    android:id="@+id/termsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/terms_label"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</layout>