<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="emailisvalid"
            type="boolean" />

        <variable
            name="processing"
            type="boolean" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:contentDescription="@string/image_cont_desc"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:elevation="2dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:contentDescription="@string/image_cont_desc"
                    app:srcCompat="@drawable/email" />

                <EditText
                    android:id="@+id/emailEdt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:textSize="12sp"
                    android:paddingRight="8dp"
                    android:hint="@string/email_plhldr"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/passLlt"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:elevation="2dp"
                android:weightSum="1"
                android:visibility="@{emailisvalid ? View.VISIBLE : View.GONE}">

                <ImageView
                    android:id="@+id/imageView412"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:contentDescription="@string/image_cont_desc"
                    app:srcCompat="@drawable/lock" />

                <EditText
                    android:id="@+id/passEdt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:textSize="12sp"
                    android:paddingRight="8dp"
                    android:hint="@string/new_password_plhldr"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/confpassLlt"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:elevation="2dp"
                android:weightSum="1"
                android:visibility="@{emailisvalid ? View.VISIBLE : View.GONE}">

                <ImageView
                    android:id="@+id/imageView4112"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:contentDescription="@string/image_cont_desc"
                    app:srcCompat="@drawable/lock" />

                <EditText
                    android:id="@+id/confpassEdt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:textSize="12sp"
                    android:paddingRight="8dp"
                    android:hint="@string/confrmpassword_plhldr"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword" />

            </LinearLayout>

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_gravity="center_horizontal"
                android:gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/error_color"
                android:text="@string/required_fields" />

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center|bottom"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_gravity="bottom">-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/loadingIndLlt"
                    android:layout_width="222dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/ripple_drawable"
                    android:elevation="2dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="@{processing ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toTopOf="@+id/signInBtn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/loadingInd"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        style="@style/AVLoadingIndicatorView"
                        app:indicatorName="BallPulseIndicator" />

                </LinearLayout>

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="222dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/submit_btn_label"
                    android:textColor="@android:color/white"
                    android:background="@drawable/ripple_drawable"
                    android:visibility="@{!processing ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toTopOf="@+id/signInBtn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <Button
                    android:id="@+id/signInBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_label"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <!--</LinearLayout>-->
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</layout>
